native/desktop-macos/headers/desktop_macos.h

typedef enum WindowVisualEffect {
  TitlebarEffect,
  SelectionEffect,
  MenuEffect,
  PopoverEffect,
  SidebarEffect,
  HeaderViewEffect,
  SheetEffect,
  WindowBackgroundEffect,
  HUDWindowEffect,
  FullScreenUIEffect,
  ToolTipEffect,
  ContentBackgroundEffect,
  UnderWindowBackgroundEffect,
  UnderPageBackgroundEffect,
} WindowVisualEffect;
typedef struct Window Window;
typedef uint32_t KeyModifiersSet;
typedef double LogicalPixels;
typedef struct LogicalPoint {
  LogicalPixels x;
  LogicalPixels y;
} LogicalPoint;
typedef uint32_t ScreenId;
typedef struct Color {
  double red;
  double green;
  double blue;
  double alpha;
} Color;
typedef enum WindowBackground_Tag {
  Transparent,
  SolidColor,
  VisualEffect,
} WindowBackground_Tag;
typedef struct WindowBackground {
  WindowBackground_Tag tag;
  union {
    struct {
      struct Color solid_color;
    };
    struct {
      enum WindowVisualEffect visual_effect;
    };
  };
} WindowBackground;
typedef struct ScreenInfo {
  ScreenId screen_id;
  bool is_primary;
  StrPtr name;
  struct LogicalPoint origin;
  struct LogicalSize size;
  double scale;
} ScreenInfo;
typedef int64_t ArraySize;
typedef struct ScreenInfoArray {
  struct ScreenInfo *ptr;
  ArraySize len;
} ScreenInfoArray;
typedef uint32_t MouseButtonsSet;
typedef struct AppMenuItem {
  AppMenuItem_Tag tag;
  union {
    ActionItem_Body action_item;
    SubMenuItem_Body sub_menu_item;
  };
} AppMenuItem;
typedef struct AppMenuStructure {
  const struct AppMenuItem *items;
  ArraySize items_count;
} AppMenuStructure;
void dispatcher_main_exec_async(void (*f)(void));
void window_set_background(const struct Window *window, struct WindowBackground background);
struct ScreenInfoArray screen_list(void);
void screen_list_drop(struct ScreenInfoArray arr);
ScreenId screen_get_main_screen_id(void);
MouseButtonsSet events_pressed_mouse_buttons(void);
KeyModifiersSet events_pressed_modifiers(void);
struct LogicalPoint events_cursor_location_in_screen(void);
void main_menu_update(struct AppMenuStructure menu);