kotlin-desktop-toolkit/src/main/java/org/jetbrains/desktop/macos/generated/desktop_macos_h.java


    /**
     * {@snippet lang=c :
     * void window_set_background(const struct Window *window, struct WindowBackground background)
     * }
     */
    public static void window_set_background(MemorySegment window, MemorySegment background) {
        var mh$ = window_set_background.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("window_set_background", window, background);
            }
            mh$.invokeExact(window, background);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class screen_list {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ScreenInfoArray.layout()    );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("screen_list");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * struct ScreenInfoArray screen_list()
     * }
     */
    public static FunctionDescriptor screen_list$descriptor() {
        return screen_list.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * struct ScreenInfoArray screen_list()
     * }
     */
    public static MethodHandle screen_list$handle() {
        return screen_list.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * struct ScreenInfoArray screen_list()
     * }
     */
    public static MemorySegment screen_list$address() {
        return screen_list.ADDR;
    }

    /**
     * {@snippet lang=c :
     * struct ScreenInfoArray screen_list()
     * }
     */
    public static MemorySegment screen_list(SegmentAllocator allocator) {
        var mh$ = screen_list.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("screen_list", allocator);
            }
            return (MemorySegment)mh$.invokeExact(allocator);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class screen_list_drop {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ScreenInfoArray.layout()
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("screen_list_drop");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void screen_list_drop(struct ScreenInfoArray arr)
     * }
     */
    public static FunctionDescriptor screen_list_drop$descriptor() {
        return screen_list_drop.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void screen_list_drop(struct ScreenInfoArray arr)
     * }
     */
    public static MethodHandle screen_list_drop$handle() {
        return screen_list_drop.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void screen_list_drop(struct ScreenInfoArray arr)
     * }
     */
    public static MemorySegment screen_list_drop$address() {
        return screen_list_drop.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void screen_list_drop(struct ScreenInfoArray arr)
     * }
     */
    public static void screen_list_drop(MemorySegment arr) {
        var mh$ = screen_list_drop.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("screen_list_drop", arr);
            }
            mh$.invokeExact(arr);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class screen_get_main_screen_id {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            desktop_macos_h.C_INT    );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("screen_get_main_screen_id");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ScreenId screen_get_main_screen_id()
     * }
     */
    public static FunctionDescriptor screen_get_main_screen_id$descriptor() {
        return screen_get_main_screen_id.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ScreenId screen_get_main_screen_id()
     * }
     */
    public static MethodHandle screen_get_main_screen_id$handle() {
        return screen_get_main_screen_id.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ScreenId screen_get_main_screen_id()
     * }
     */
    public static MemorySegment screen_get_main_screen_id$address() {
        return screen_get_main_screen_id.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ScreenId screen_get_main_screen_id()
     * }
     */
    public static int screen_get_main_screen_id() {
        var mh$ = screen_get_main_screen_id.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("screen_get_main_screen_id");
            }
            return (int)mh$.invokeExact();
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class events_pressed_mouse_buttons {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            desktop_macos_h.C_INT    );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("events_pressed_mouse_buttons");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MouseButtonsSet events_pressed_mouse_buttons()
     * }
     */
    public static FunctionDescriptor events_pressed_mouse_buttons$descriptor() {
        return events_pressed_mouse_buttons.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MouseButtonsSet events_pressed_mouse_buttons()
     * }
     */
    public static MethodHandle events_pressed_mouse_buttons$handle() {
        return events_pressed_mouse_buttons.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MouseButtonsSet events_pressed_mouse_buttons()
     * }
     */
    public static MemorySegment events_pressed_mouse_buttons$address() {
        return events_pressed_mouse_buttons.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MouseButtonsSet events_pressed_mouse_buttons()
     * }
     */
    public static int events_pressed_mouse_buttons() {
        var mh$ = events_pressed_mouse_buttons.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("events_pressed_mouse_buttons");
            }
            return (int)mh$.invokeExact();
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class events_pressed_modifiers {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            desktop_macos_h.C_INT    );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("events_pressed_modifiers");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * KeyModifiersSet events_pressed_modifiers()
     * }
     */
    public static FunctionDescriptor events_pressed_modifiers$descriptor() {
        return events_pressed_modifiers.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * KeyModifiersSet events_pressed_modifiers()
     * }
     */
    public static MethodHandle events_pressed_modifiers$handle() {
        return events_pressed_modifiers.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * KeyModifiersSet events_pressed_modifiers()
     * }
     */
    public static MemorySegment events_pressed_modifiers$address() {
        return events_pressed_modifiers.ADDR;
    }

    /**
     * {@snippet lang=c :
     * KeyModifiersSet events_pressed_modifiers()
     * }
     */
    public static int events_pressed_modifiers() {
        var mh$ = events_pressed_modifiers.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("events_pressed_modifiers");
            }
            return (int)mh$.invokeExact();
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class events_cursor_location_in_screen {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            LogicalPoint.layout()    );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("events_cursor_location_in_screen");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * struct LogicalPoint events_cursor_location_in_screen()
     * }
     */
    public static FunctionDescriptor events_cursor_location_in_screen$descriptor() {
        return events_cursor_location_in_screen.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * struct LogicalPoint events_cursor_location_in_screen()
     * }
     */
    public static MethodHandle events_cursor_location_in_screen$handle() {
        return events_cursor_location_in_screen.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * struct LogicalPoint events_cursor_location_in_screen()
     * }
     */
    public static MemorySegment events_cursor_location_in_screen$address() {
        return events_cursor_location_in_screen.ADDR;
    }

    /**
     * {@snippet lang=c :
     * struct LogicalPoint events_cursor_location_in_screen()
     * }
     */
    public static MemorySegment events_cursor_location_in_screen(SegmentAllocator allocator) {
        var mh$ = events_cursor_location_in_screen.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("events_cursor_location_in_screen", allocator);
            }
            return (MemorySegment)mh$.invokeExact(allocator);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class main_menu_update {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            AppMenuStructure.layout()
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("main_menu_update");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void main_menu_update(struct AppMenuStructure menu)
     * }
     */
    public static FunctionDescriptor main_menu_update$descriptor() {
        return main_menu_update.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void main_menu_update(struct AppMenuStructure menu)
     * }
     */
    public static MethodHandle main_menu_update$handle() {
        return main_menu_update.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void main_menu_update(struct AppMenuStructure menu)
     * }
     */
    public static MemorySegment main_menu_update$address() {
        return main_menu_update.ADDR;
    }
